<resources>
    <string name="app_name">POS System 5.2</string>

    <!--Splash Screen Start-->
    <string name="license_txt_line1">This Product is Licensed to <b>ITESS</b>.</string>
    <string name="license_txt_line2">ITES Software (Pvt) Ltd.</string>
    <string name="license_txt_line3">POS System 5.2</string>
    <string name="license_txt_line4">POS System Client Application 1.0.0</string>
    <string name="license_txt_line5">Copyright © 2016 ITES Software (Pvt) Ltd, All rights reserved.</string>
    <string name="license_txt_line6">Telephone: <i>0094-0115361111, </i> Email: <i>lkabites@sltnet.lk</i></string>
    <string name="license_txt_line7">Warning!</string>
    <string name="license_txt_line8">This computer program is protected by copyright law and international treaties.
            Unauthorized reproduction or distribution of this program, or any portion of it,
            may result in service civil and criminal penalties and will be prosecuted to the
            maximum extent possible under the law.</string>
    <!--Splash Screen End-->

    <string name="title_activity_login">Login</string>

    <!-- Strings related to activity_login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="background_image">Background Image</string>
    <string name="company_logo">Company Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_success_hint">Select your restaurant and the meal period here.</string>
    <string name="continue_btn_txt">Continue</string>
    <string name="close_button_des">close button</string>
    <string name="guest_label">Guest:</string>
    <string name="loading_txt">loading...</string>
    <string name="time_label">Time:</string>
    <string name="room_no_label">Room No:</string>
    <string name="user_label">User:</string>
    <string name="kot_total_label">KOT total :</string>
    <string name="kot_no_label">KOT No:</string>
    <string name="edit_btn_txt">Edit</string>
    <string name="print_bill_txt">Print Bill</string>
    <string name="new_btn_txt">New</string>
    <string name="close_bill_btn_txt">Close Bill</string>
    <string name="table_image">table image</string>
    <string name="logout">Logout</string>

</resources>
