<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splash_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/flash_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/splash_content_layout"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/license_txt_line1"
                android:textAlignment="center"
                android:textColor="#333"
                android:textSize="18sp"
                android:verticalScrollbarPosition="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@+id/linearLayout2"
                android:padding="10dp"
                app:srcCompat="@drawable/iteslogo" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageView2"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/license_txt_line2"
                    android:textAlignment="textStart"
                    android:textColor="#333"
                    android:textSize="18sp"
                    android:verticalScrollbarPosition="right" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/license_txt_line3"
                    android:textAlignment="textStart"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:verticalScrollbarPosition="right" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/license_txt_line4"
                    android:textAlignment="textStart"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:verticalScrollbarPosition="right" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/license_txt_line5"
                    android:textAlignment="textStart"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"
                    android:verticalScrollbarPosition="right" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/license_txt_line6"
                    android:textAlignment="textStart"
                    android:textColor="#333"
                    android:textSize="12sp"
                    android:verticalScrollbarPosition="right" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/license_txt_line7"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="normal|bold"
                android:verticalScrollbarPosition="right" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|left"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/license_txt_line8"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10sp"
                android:verticalScrollbarPosition="right" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>